--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "mockery/mockery": "^1.5.1",
         "orchestra/canvas": "^8.0",
         "phpstan/phpstan": "^1.9.14",
-        "phpunit/phpunit": "^9.5.27",
+        "phpunit/phpunit": "^9.6.0 || ^10.0.1",
         "spatie/laravel-ray": "^1.32",
         "symfony/process": "^6.2",
         "symfony/yaml": "^6.2",
@@ -55,7 +55,7 @@
         "nunomaduro/collision": "Allow using Laravel style tests output and parallel testing (^6.4).",
         "orchestra/testbench-browser-kit": "Allow using legacy Laravel BrowserKit for testing (^7.0).",
         "orchestra/testbench-dusk": "Allow using Laravel Dusk for testing (^7.0).",
-        "phpunit/phpunit": "Allow using PHPUnit for testing (^9.5.27).",
+        "phpunit/phpunit": "Allow using PHPUnit for testing (^9.5.27 || ^10.0).",
         "symfony/yaml": "Required for CLI Commander (^6.2).",
         "vlucas/phpdotenv": "Required for CLI Commander (^5.5.0)."
     },
@@ -72,7 +72,8 @@
             "@php vendor/bin/phpstan analyse",
             "@php vendor/bin/pint"
         ],
-        "test": "@php vendor/bin/phpunit -c ./ --color"
+        "test": "@php vendor/bin/phpunit -c ./ --color",
+        "test:phpunit9": "@php vendor/bin/phpunit -c ./phpunit9.xml --color"
     },
     "config": {
         "sort-packages": true
