--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -19,6 +19,7 @@ jobs:
           - 8.2
         phpunit:
           - "9.x"
+          - "10.x"
         dependencies:
           - "highest"
           - "lowest"
@@ -28,6 +29,9 @@ jobs:
           - phpunit: "9.x"
             collision: "^6.4"
             paratest: "^6.4"
+          - phpunit: "10.x"
+            collision: "^7.0"
+            paratest: "^7.0"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
