--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -29,9 +29,9 @@ jobs:
           - phpunit: "9.x"
             collision: "^6.4"
             paratest: "^6.4"
-          - phpunit: "10.x"
-            collision: "^7.0"
-            paratest: "^7.0"
+          # - phpunit: "10.x"
+          #   collision: "^7.0"
+          #   paratest: "^7.0"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
