--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "vlucas/phpdotenv": "^5.5.0"
     },
     "suggest": {
-        "brianium/paratest": "Allow using parallel tresting (^6.4).",
+        "brianium/paratest": "Allow using parallel tresting (^6.4 || ^7.0).",
         "fakerphp/faker": "Allow using Faker for testing (^1.21).",
         "laravel/framework": "Required for testing (^10.0).",
         "mockery/mockery": "Allow using Mockery for testing (^1.5.1).",
