--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -71,8 +71,14 @@ jobs:
         run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
-      - name: Execute tests (without deprecations)
+      - name: Execute tests (without deprecations on PHPUnit 10)
         run: ./testbench package:test --parallel --exclude-group commander,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest'
+        if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
+
+      - name: Execute tests (without deprecations on PHPUnit 9)
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
