--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -59,19 +59,25 @@ jobs:
         run: |
           composer show -D
 
-      - name: Execute tests (with deprecations)
+      - name: Execute tests (with deprecations on PHPUnit 10)
         run: ./testbench package:test --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
-      - name: Execute tests (with deprecations)
+      - name: Execute tests (with deprecations on PHPUnit 9)
         run: ./testbench package:test -c phpunit9.xml --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
-      - name: Execute tests (without deprecations)
+      - name: Execute tests (without deprecations on PHPUnit 10)
         run: ./testbench package:test --exclude-group commander,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest'
+        if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
+
+      - name: Execute tests (without deprecations on PHPUnit 9)
+        run: ./testbench package:test -c phpunit9.xml --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest' && matrix.phpunit == '9.x'
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
