--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -64,21 +64,21 @@ jobs:
           composer show -D
 
       - name: Execute tests (with deprecations on PHPUnit 10)
-        run: ./testbench package:test --parallel --exclude-group commander
+        run: ./testbench package:test --parallel --exclude-group commander,without-parallel
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (with deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,without-parallel
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
       - name: Execute tests (without deprecations on PHPUnit 10)
-        run: ./testbench package:test --parallel --exclude-group commander,deprecations
+        run: ./testbench package:test --parallel --exclude-group commander,deprecations,without-parallel
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (without deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations,without-parallel
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
