--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -68,7 +68,7 @@ jobs:
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (with deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,without-parallel
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
       - name: Execute tests (without deprecations on PHPUnit 10)
@@ -78,7 +78,7 @@ jobs:
         if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (without deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations,without-parallel
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
