--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -19,12 +19,12 @@ jobs:
           - 8.2
         phpunit:
           - "9.x"
-          # - "10.x"
+          - "10.x"
         dependencies:
           - "highest"
           - "lowest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
@@ -63,16 +63,22 @@ jobs:
         run: |
           composer show -D
 
-      - name: Execute tests (with deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander
+      - name: Execute tests (with deprecations on PHPUnit 10)
+        run: ./testbench package:test --parallel --exclude-group commander,without-parallel
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
-      - name: Execute tests (with deprecations)
+      - name: Execute tests (with deprecations on PHPUnit 9)
         run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
-      - name: Execute tests (without deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander,deprecations
+      - name: Execute tests (without deprecations on PHPUnit 10)
+        run: ./testbench package:test --parallel --exclude-group commander,deprecations,without-parallel
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest'
+        if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
+
+      - name: Execute tests (without deprecations on PHPUnit 9)
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
