--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -1,83 +1,83 @@
 name: parallel-tests
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 0 1 * *'
+# on:
+#   push:
+#   pull_request:
+#   schedule:
+#     - cron: '0 0 1 * *'
 
-jobs:
-  tests:
-    runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.experimental }}
-    strategy:
-      matrix:
-        os:
-          - "ubuntu-latest"
-        php:
-          - 8.2
-        phpunit:
-          - "9.x"
-          - "10.x"
-        dependencies:
-          - "highest"
-          - "lowest"
-        experimental:
-          - false
+# jobs:
+#   tests:
+#     runs-on: ${{ matrix.os }}
+#     continue-on-error: ${{ matrix.experimental }}
+#     strategy:
+#       matrix:
+#         os:
+#           - "ubuntu-latest"
+#         php:
+#           - 8.2
+#         phpunit:
+#           - "9.x"
+#           - "10.x"
+#         dependencies:
+#           - "highest"
+#           - "lowest"
+#         experimental:
+#           - false
 
-    name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
+#     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, intl, fileinfo
-          coverage: none
+#       - name: Setup PHP
+#         uses: shivammathur/setup-php@v2
+#         with:
+#           php-version: ${{ matrix.php }}
+#           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, intl, fileinfo
+#           coverage: none
 
-      - name: Install PHPUnit ${{ matrix.phpunit }}
-        run: |
-          composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
+#       - name: Install PHPUnit ${{ matrix.phpunit }}
+#         run: |
+#           composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
 
-      - name: Install Paratest (for PHPUnit 9.x)
-        run: |
-          composer require "nunomaduro/collision:^6.4" "brianium/paratest:^6.4" --dev --no-interaction --no-update
-        if: matrix.phpunit == '9.x'
+#       - name: Install Paratest (for PHPUnit 9.x)
+#         run: |
+#           composer require "nunomaduro/collision:^6.4" "brianium/paratest:^6.4" --dev --no-interaction --no-update
+#         if: matrix.phpunit == '9.x'
 
-      - name: Install Paratest (for PHPUnit 9.x)
-        run: |
-          composer require "nunomaduro/collision:^7.0" "brianium/paratest:^7.0" --dev --no-interaction --no-update
-        if: matrix.phpunit == '10.x'
+#       - name: Install Paratest (for PHPUnit 9.x)
+#         run: |
+#           composer require "nunomaduro/collision:^7.0" "brianium/paratest:^7.0" --dev --no-interaction --no-update
+#         if: matrix.phpunit == '10.x'
 
-      - name: Install dependencies
-        uses: "ramsey/composer-install@v2"
-        with:
-          dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache"
+#       - name: Install dependencies
+#         uses: "ramsey/composer-install@v2"
+#         with:
+#           dependency-versions: "${{ matrix.dependencies }}"
+#           composer-options: "--prefer-dist --no-cache"
 
-      - name: Installed dependencies
-        run: |
-          composer show -D
+#       - name: Installed dependencies
+#         run: |
+#           composer show -D
 
-      - name: Execute tests (with deprecations on PHPUnit 10)
-        run: ./testbench package:test --parallel --exclude-group commander,without-parallel
-        if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
+#       - name: Execute tests (with deprecations on PHPUnit 10)
+#         run: ./testbench package:test --parallel --exclude-group commander,without-parallel
+#         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
-      - name: Execute tests (with deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
-        if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
+#       - name: Execute tests (with deprecations on PHPUnit 9)
+#         run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
+#         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
-      - name: Execute tests (without deprecations on PHPUnit 10)
-        run: ./testbench package:test --parallel --exclude-group commander,deprecations,without-parallel
-        env:
-          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
+#       - name: Execute tests (without deprecations on PHPUnit 10)
+#         run: ./testbench package:test --parallel --exclude-group commander,deprecations,without-parallel
+#         env:
+#           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+#         if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
 
-      - name: Execute tests (without deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
-        env:
-          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
+#       - name: Execute tests (without deprecations on PHPUnit 9)
+#         run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
+#         env:
+#           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+#         if: matrix.dependencies != 'highest'&& matrix.phpunit == '9.x'
