--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache"
+          composer-options: "--prefer-dist --prefer-stable --no-cache"
 
       - name: Installed dependencies
         run: |
@@ -121,7 +121,7 @@ jobs:
         uses: "ramsey/composer-install@v2"
         with:
           dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache"
+          composer-options: "--prefer-dist --prefer-stable --no-cache"
 
       - name: Execute tests
         run: ./testbench package:test --coverage --exclude-group commander,deprecations
