--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "testbench"
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "composer-runtime-api": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
