--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+        env:
+          RAY_ENABLED: false
 
       - name: Upload coverage results to Coveralls
         env:
