--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -70,7 +70,7 @@ jobs:
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (with deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
+        run: ./testbench package:test --configuration phpunit9.xml --parallel --exclude-group commander
         env:
           RAY_ENABLED: false
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
@@ -83,7 +83,7 @@ jobs:
         if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (without deprecations on PHPUnit 9)
-        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander,deprecations
+        run: ./testbench package:test --configuration phpunit9.xml --parallel --exclude-group commander,deprecations
         env:
           RAY_ENABLED: false
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
