--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -18,16 +18,13 @@ jobs:
           - 8.2
         phpunit:
           - "10.x"
+        collision:
+          - "^7.0"
         dependencies:
           - "highest"
           - "lowest"
         experimental:
           - true
-        include:
-          - phpunit: "9.x"
-            collision: "^6.4"
-          - phpunit: "10.x"
-            collision: "^7.0"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
@@ -80,14 +77,13 @@ jobs:
         php:
           - 8.2
         phpunit:
-          - "9.x"
+          - "10.x"
+        collision:
+          - "^7.0"
         dependencies:
           - "highest"
         experimental:
           - true
-        include:
-          - phpunit: "9.x"
-            collision: "^6.4"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }}) with Coverage
 
