--- a/composer.json
+++ b/composer.json
@@ -73,8 +73,7 @@
             "@php vendor/bin/phpstan analyse",
             "@php vendor/bin/pint"
         ],
-        "test": "@php vendor/bin/phpunit -c ./ --color",
-        "test:phpunit9": "@php vendor/bin/phpunit -c ./phpunit9.xml --color"
+        "test": "@php vendor/bin/phpunit -c ./ --color"
     },
     "config": {
         "sort-packages": true
