--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -18,18 +18,14 @@ jobs:
           - 8.1
           - 8.2
         phpunit:
-          - "9.x"
           - "10.x"
+        collision:
+          - "^7.0"
         dependencies:
           - "highest"
           - "lowest"
         experimental:
           - false
-        include:
-          - phpunit: "9.x"
-            collision: "^6.4"
-          - phpunit: "10.x"
-            collision: "^7.0"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
@@ -65,25 +61,12 @@ jobs:
           RAY_ENABLED: false
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
-      - name: Execute tests (with deprecations on PHPUnit 9)
-        run: ./testbench package:test --configuration phpunit9.xml --exclude-group commander
-        env:
-          RAY_ENABLED: false
-        if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
-
       - name: Execute tests (without deprecations on PHPUnit 10)
         run: ./testbench package:test --exclude-group commander,deprecations
         env:
           RAY_ENABLED: false
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest' && matrix.phpunit == '10.x'
-
-      - name: Execute tests (without deprecations on PHPUnit 9)
-        run: ./testbench package:test --configuration phpunit9.xml --exclude-group commander,deprecations
-        env:
-          RAY_ENABLED: false
-          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.dependencies != 'highest' && matrix.phpunit == '9.x'
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
@@ -96,14 +79,13 @@ jobs:
           - 8.1
           - 8.2
         phpunit:
-          - "9.x"
+          - "10.x"
+        collision:
+          - "^7.0"
         dependencies:
           - "highest"
         experimental:
           - false
-        include:
-          - phpunit: "9.x"
-            collision: "^6.4"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }}) with Coverage
 
