--- a/.github/workflows/tests-phpunit9.yaml
+++ b/.github/workflows/tests-phpunit9.yaml
@@ -19,6 +19,7 @@ jobs:
           - "9.x"
         dependencies:
           - "highest"
+          - "lowest"
         experimental:
           - true
 
