--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "testbench"
     ],
     "require": {
-        "php": "^8.2",
+        "php": ">=8.2.0 <8.3.0",
         "composer-runtime-api": "^2.2"
     },
     "require-dev": {
