--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -55,11 +55,11 @@ jobs:
           composer show -D
 
       - name: Execute tests (with deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander
+        run: ./testbench package:test --parallel --exclude-group commander,database
         if: matrix.dependencies == 'highest'
 
       - name: Execute tests (without deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander,deprecations
+        run: ./testbench package:test --parallel --exclude-group commander,deprecations,database
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest'
