--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -54,21 +54,21 @@ jobs:
         run: vendor/bin/phpunit
         env:
           RAY_ENABLED: false
-        if: matrix.phpunit !== '10.0.x' && matrix.os != 'windows-latest'
+        if: matrix.phpunit != '10.0.x' && matrix.os != 'windows-latest'
 
       - name: Execute tests (without deprecations)
         run: vendor/bin/phpunit --exclude-group deprecations
         env:
           RAY_ENABLED: false
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.phpunit !== '10.0.x' && matrix.os == 'windows-latest'
+        if: matrix.phpunit != '10.0.x' && matrix.os == 'windows-latest'
 
       - name: Execute tests (on PHPUnit 10.0)
         run: vendor/bin/phpunit --exclude-group deprecations --no-coverage --no-configuration --dont-report-useless-tests --bootstrap vendor/autoload.php tests
         env:
           RAY_ENABLED: false
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
-        if: matrix.phpunit !== '10.0.x'
+        if: matrix.phpunit == '10.0.x'
 
   tests-on-phpunit-9:
     runs-on: ${{ matrix.os }}
