--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -44,6 +44,10 @@ jobs:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist --prefer-stable"
 
+      - name: Installed dependencies
+        run: |
+          composer show -D
+
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
         env:
