--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -20,9 +20,10 @@ jobs:
         phpunit:
           - "10.1.x"
         collision:
-          - "^7.0"
+          - "^7.4"
         dependencies:
           - "highest"
+          - "lowest"
         experimental:
           - false
 
@@ -80,7 +81,7 @@ jobs:
         phpunit:
           - "10.1.x"
         collision:
-          - "^7.0"
+          - "^7.4"
         dependencies:
           - "highest"
         experimental:
